--- a/index.html
+++ b/index.html
@@ -1,3 +1,179 @@
-Real World Strategy Game
-How to play: click on the map
-<a href="mailto:batyainthehouse@gmail.com">Support</a>
+<!-- B O D Y -->
+
+<body>
+    <div class="blue-block">
+        <h1 class="h1-tittle">Real World Map Strategy</h1>
+        <div class="build-block"><p class="build-block-txt">Build your<br>civilIzation ON<br>REAL MAP</p></div>
+        <div class="sea-img-div"><img class="sea-img" src="img/sea.webp"></div>
+        <div class="diplomacy-block"><p class="diplomacy-block-txt">Diplomacy<br>economics<br>wars</p></div>
+        <div class="play-one-real-block"><p class="play-one-real-block-txt">Play on real map with other<br>people</p></div>
+        <div class="apple-img-div"><a href="https://apps.apple.com/us/app/real-world-map-war-strategy/id1613987268?platform=iphone"><img class="apple-img" src="img/apple.svg"></a></div>
+        <a class="button-support-a" href="mailto:batyainthehouse@gmail.com"><div class="button-support">Support</div></a>
+        <div class="footer-txt-block">
+            <div><p class="footer-txt1"><a href="https://batyainthehouse.github.io/KrasotaPolicy/">Privacy</a></p></div>
+            <div><p class="footer-txt2"><a href="https://batyainthehouse.github.io/KrasotaTOS/">Terms of Use</a></p></div>
+        </div>
+    </div>
+</body>
+
+<!-- S T Y L E -->
+
+<style>
+    body{
+        background-color: #e1e1e1;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+    }
+    @font-face {
+        font-family: "Horizon"; 
+        src: url("fonts/Horizon.otf") format("truetype"); 
+        font-style: normal; 
+        font-weight: normal; 
+    } 
+    @font-face {
+        font-family: "PPGatwick"; 
+        src: url("fonts/PPGatwick-Bold.otf") format("truetype"); 
+        font-style: normal; 
+        font-weight: normal; 
+    }   
+    .blue-block{
+        background-color: #004AAD;
+        width: 420px;
+        height: 922px;
+    }
+    .h1-tittle{
+        color: #fff;
+        font-family: "Horizon";
+        text-align: center;
+        margin-top: 41px;
+        font-size: 26px;
+        line-height: 38px;
+    }
+    .footer-txt-block{
+        display: flex;
+        justify-content: space-between;
+        padding-top: 20px;
+    }
+    .footer-txt1 a{
+        color: #000;
+        text-decoration: none;
+        font-family: "Horizon";
+        font-size: 8px;
+        transition: 0.5s;
+
+    }
+    .footer-txt1 a:hover{
+        color: #fff;
+    }
+    .footer-txt2 a{
+        color: #000;
+        text-decoration: none;
+        font-family: "Horizon";
+        font-size: 8px;
+        transition: 0.5s;
+
+    }
+    .footer-txt2 a:hover{
+        color: #fff;
+    }
+    .footer-txt1{
+        margin-left: 28px; 
+    }
+    .footer-txt2{
+        margin-right: 28px; 
+    }
+    .button-support{
+        background-color: #16203F;
+        color: #fff;
+        font-family: "PPGatwick";
+        font-size: 16px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        width: 362px;
+        margin: 0 auto;
+        text-align: center;
+        transition: 0.5s;
+    }
+    .button-support:hover{
+        background-color: #fff;
+        color: #16203F;
+        
+    }
+    .button-support-a{
+        text-decoration: none;
+    }
+    .apple-img-div{
+        text-align: center;
+        padding-bottom: 26px;
+        padding-top: 26px;
+
+    }
+    .apple-img{
+        width: 50%;
+        transition: 0.5s;
+    }
+    .apple-img:hover{
+        opacity: 0.4;
+    }
+    .play-one-real-block{
+        background-color: #38B6FF;
+        border: 1px solid #16203F;
+        width: 320px;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        margin: 0 auto;
+        position: relative;
+        z-index: 1;
+    }
+    .play-one-real-block-txt{
+        font-family: "PPGatwick";
+        font-size: 12px;
+        letter-spacing: 0.6px;
+        text-align: center;
+        color: #000;        
+    }
+    .diplomacy-block{
+        background-color: #38B6FF;
+        border: 1px solid #16203F;
+        width: 325px;
+        margin-left: 28px;
+        margin-bottom: -18px;
+        position: relative;
+        z-index: 1;
+    }
+    .diplomacy-block-txt{
+        font-family: "Horizon";
+        color: #000;
+        text-align: center;
+        font-size: 26px;
+        line-height: 26px;
+        margin-top: 20px;
+        padding-bottom: 16px;
+    }
+    .sea-img-div{
+        margin-left: 48px;
+        margin-bottom: -10px;
+    }
+    .sea-img{
+        width: 325px;
+        border-top-right-radius: 70px;
+    }
+    .build-block{
+        background-color: #38B6FF;
+        border: 1px solid #16203F;
+        width: 188px;
+        margin-left: 20px;
+        margin-bottom: -30px;
+        z-index: 1;
+        position: relative;
+    }
+    .build-block-txt{
+        font-family: "Horizon";
+        color: #000;
+        margin: 0;
+        font-size: 12px;
+        line-height: 16px;
+        padding: 8px 10px 8px 12px;
+    }
+</style>
