--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- B O D Y -->
-
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <body>
     <div class="blue-block">
         <h1 class="h1-tittle">Real World Map Strategy</h1>
@@ -19,11 +19,15 @@
 <!-- S T Y L E -->
 
 <style>
+    html{
+        background-color: #004aad;
+    }
     body{
-        background-color: #e1e1e1;
+        background-color: #004aad;
         margin: 0;
         display: flex;
         justify-content: center;
+        
     }
     @font-face {
         font-family: "Horizon"; 
@@ -40,7 +44,7 @@
     .blue-block{
         background-color: #004AAD;
         width: 420px;
-        height: 922px;
+        height: auto;
     }
     .h1-tittle{
         color: #fff;
