--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <div class="sea-img-div"><img class="sea-img" src="img/sea.webp"></div>
         <div class="diplomacy-block"><p class="diplomacy-block-txt">Diplomacy<br>economics<br>wars</p></div>
         <div class="play-one-real-block"><p class="play-one-real-block-txt">Play on real map with other<br>people</p></div>
-        <div class="apple-img-div"><a href="https://apps.apple.com/us/app/real-world-map-war-strategy/id1613987268?platform=iphone"><img class="apple-img" src="img/apple.svg"></a></div>
+        <div class="apple-img-div"><a href="https://apps.apple.com/us/app/real-world-map-war-strategy/id1613987268?platform=iphone" target="_blank"><img class="apple-img" src="img/apple.svg"></a></div>
         <a class="button-support-a" href="mailto:batyainthehouse@gmail.com"><div class="button-support">Support</div></a>
         <div class="footer-txt-block">
             <div><p class="footer-txt1"><a href="https://batyainthehouse.github.io/KrasotaPolicy/">Privacy</a></p></div>
@@ -23,7 +23,7 @@
         background-color: #004aad;
     }
     body{
-        background-color: #004aad;
+        background-color: rgb(245 245 245);
         margin: 0;
         display: flex;
         justify-content: center;
@@ -44,7 +44,7 @@
     .blue-block{
         background-color: #004AAD;
         width: 420px;
-        height: auto;
+        height: max-content;
     }
     .h1-tittle{
         color: #fff;
@@ -118,7 +118,7 @@
         transition: 0.5s;
     }
     .apple-img:hover{
-        opacity: 0.4;
+        transform: scale(1.05);
     }
     .play-one-real-block{
         background-color: #38B6FF;
